css/style.css
/* ... */
.footer-menu-link:hover,
.footer-menu-link:focus,
.footer-menu-link:active {
	color: rgb(255, 188, 158);

	border-color: rgba(255, 188, 158, .3);
	outline: none;
}

.footer-copyright {
	min-width: 190px;
}

.copyright-txt {
	margin: 0;
	padding: 0;

	font-size: 12px;
	line-height: 18px;
	color: rgb(255, 255, 255);
}

.copyright-link{
	color: rgb(255, 255, 255);

	border-bottom: 1px solid rgba(255, 255, 255, .2);
}

.copyright-link:hover,
.copyright-link:focus,
.copyright-link:active {
	color: rgb(255, 188, 158);

	border-color: rgba(255, 188, 158, .3);
	outline: none;
}
/*END of Footer*/

/*Search Form in User Navigation*/
.search-form {
	position: absolute;
	top: 35px;
	right: 230px;

	border-radius: 5px;
	box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);

	display: none;
}

.user-navigation-item:hover .search-form,
.user-navigation-item:focus .search-form {
	display: block;
}

.search-form .field-input {
	width: 278px;
}
/*END of Search Form in User Navigation*/

/*Login Form in User Navigation*/
.login-form {
	position: absolute;
	top: 35px;
	right: 125px;
	padding-right: 20px;
	padding-left: 20px;
	padding-bottom: 23px;

	border-radius: 5px;
	box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);

	display: none;
}

.user-navigation-item:hover .login-form,
.user-navigation-item:focus .login-form {
	display: block;
}

.login-form .field-input {
	width: 208px;
	margin-bottom: 20px;
}

.login-enter {
	display: flex;
	justify-content: space-between;
}

.login-reg {
	display: inline-block;

	font-size: 13px;
	line-height: 13px;
	font-weight: 400;
	color: rgb(50, 50, 50);

	border-bottom: 1px solid rgba(0, 0, 0, .3);
}

.login-reg:hover,
.login-reg:focus,
.login-reg:active {
	color: rgb(232, 77, 55);
	outline: none;

	border-color: rgba(232, 77, 55, .3);
}

.btn-login {
	margin-top: auto;
	margin-right: 18px;
	margin-bottom: auto;

}
/*END of Login Form in User Navigation*/

/*Cart in User Navigation*/
.cart {
	position: absolute;
	top: 35px;
	right: 0px;
	
	display: block;
	width: 540px;
	min-height: 202px;
	padding-top: 20px;
	padding-right: 15px;
	padding-bottom: 20px;
	padding-left: 15px;

	background-color: rgb(248, 247, 244);
	border-radius: 5px;

	box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
	box-sizing: border-box;
	border-spacing: 0;
}

.cart tr {
	display: flex;
}
.cart td {
	vertical-align: top;
}

.cart-delete-item {
	padding-top: 5px;
	padding-right: 12px;
}

.cart-delete {
	padding: 0;
	width: 11px;
	height: 11px;

	background-color: transparent;
	background-image: url(../img/cross-small.svg);
	background-repeat: no-repeat;
	background-position: 0 0;

	border: none;
	cursor: pointer;
}

.cart-description,
.cart-cost,
.cart-prod-summ {
	display: block;
	padding-top: 10px;

	font-size: 13px;
	line-height: 16px;
	color: rgb(50, 50, 50);
}

.cart-description a {
	color: rgb(50, 50,50);
}


.cart-description {
	width: 230px;
	padding-right: 16px;
	padding-left: 12px;
}

.cart-cost {
	padding-right: 27px;
}

.cart-prod-price {
	color: rgb(153, 153, 153);
}

.cart-prod-summ {
	padding-right: 20px;
}

.cart-empty-block {
	height: 11px;
}

.cart-summ {
	flex-grow: 1;
	padding-top: 15px;

	text-align: right;

	border-top: 1px solid rgb(202, 202, 199);
}

.cart-summ p {
	margin: 0;
	padding-top: 0;
	padding-bottom: 13px;

	font-size: 15px;
	line-height: 18px;
	font-weight: 700;
	color: rgb(50, 50, 50);
}

.btn-cart {
	padding-left: 15px;
	padding-right: 15px;
}

/*END of Cart in User Navigation*/

/*Feedback Form in Contact Section*/
.feedback {
	position: relative;

	width: 428px;
	padding-top: 20px;
	padding-bottom: 20px;
	padding-right: 25px;
	padding-left: 25px;

	background-color: rgb(248, 247, 244);
	border-radius: 10px;
}

.feedback .form {
	padding: 0;

	text-align: right;
}

.feedback-title {
	padding: 0;
	margin-top: 0;
	margin-bottom: 24px;

	font-size: 24px;
	line-height: 28px;
	font-weight: 500;
	color: rgb(50, 50, 50);
}

.feedback .field-input {
	width: 235px;
	margin-bottom: 20px;
}

.feedback .field-textarea {
	width: 398px;
	margin-bottom: 25px;
}

/*Feedback Close Button*/
.close-btn {
	position: absolute;
	top: 20px;
	right: 20px;

	width: 25px;
	height: 25px;

	font-size: 0;
	background-color: transparent;
	border: 0;
	cursor: pointer;
}

.close-btn::before,
.close-btn::after {
	content: "";

	position: absolute;
	top: 10px;
	left: 5px;

	width: 25px;
	height: 3px;
	background-color: #231f20;
}

.close-btn::before {
	transform: rotate(45deg);
}

.close-btn::after {
	transform: rotate(-45deg);
}
/*END of Feedback Close Button*/
/*END of Feedback Form in Contact Section*/

.text-bold {
	font-weight: 700;
}

